--- a/styles/style.css
+++ b/styles/style.css
@@ -24,5 +24,5 @@ td {
 .mendeleev_face {
     height: 228px;
     width: 200px;
-    background: url(image/mendeleev.png);
+    background: url("../image/mendeleev.png");
 }
